--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 		</nav>
 	</header>
 
+	<main>
 		<div id='home' class="jumbotron jumbotron-fluid height100p banner">
 			<div class="container h100">
 				<div class="contentBox h100">
@@ -69,7 +70,7 @@
 					<div class="col-sm-4">
 						<div class="placeBox">
 							<div class="imgBx">
-								<img src="img/img1.jpg" class='img-fluid'>
+								<img src="img/img1.jpg" class='img-fluid' alt="">
 							</div>
 							<div class="content">
 								<h3>Nebula 3<br><span>Galaxy Tour</span></h3>
@@ -79,7 +80,7 @@
 					<div class="col-sm-4">
 						<div class="placeBox">
 							<div class="imgBx">
-								<img src="img/img2.jpg" class='img-fluid'>
+								<img src="img/img2.jpg" class='img-fluid' alt="">
 							</div>
 							<div class="content">
 								<h3>Milky Way<br><span>Field Observation</span></h3>
@@ -89,7 +90,7 @@
 					<div class="col-sm-4">
 						<div class="placeBox">
 							<div class="imgBx">
-								<img src="img/img3.jpg" class='img-fluid'>
+								<img src="img/img3.jpg" class='img-fluid' alt="">
 							</div>
 							<div class="content">
 								<h3>Star 436<br><span>New Investigation</span></h3>
@@ -128,7 +129,7 @@
 					<div class="col-sm-6">
 						<div class="blogpost">
 							<div class="imgBx">
-								<img src="img/img1.jpg" class="img-fluid">
+								<img src="img/img1.jpg" class="img-fluid" alt="">
 							</div>
 							<div class="content">
 								<h1>Space Exploration</h1>
@@ -142,7 +143,7 @@
 					<div class="col-sm-6">
 						<div class="blogpost">
 							<div class="imgBx">
-								<img src="img/img2.jpg" class="img-fluid">
+								<img src="img/img2.jpg" class="img-fluid" alt="">
 							</div>
 							<div class="content">
 								<h1>Reasearch & Development</h1>					
@@ -156,7 +157,7 @@
 					<div class="col-sm-6">
 						<div class="blogpost">
 							<div class="imgBx">
-								<img src="img/img3.jpg" class="img-fluid">
+								<img src="img/img3.jpg" class="img-fluid" alt="">
 							</div>
 							<div class="content">
 								<h1>Investigation Team</h1>
@@ -170,7 +171,7 @@
 					<div class="col-sm-6">
 						<div class="blogpost">
 							<div class="imgBx">
-								<img src="img/img4.jpg" class="img-fluid">
+								<img src="img/img4.jpg" class="img-fluid" alt="">
 							</div>
 							<div class="content">
 								<h1>Phenomena Observation</h1>
@@ -221,6 +222,7 @@
 				</div>
 			</div>
 		</section>
+	</main>
 		<footer>
 			<div class="container">
 				<div class="row">
@@ -237,10 +239,6 @@
 				</div>
 			</div>
 		</footer>
-	
-
-
-
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
